# Synapic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  DAMINION_API_DEBUGGING.md  DOCUMENTATION_PLAN.md  README.md  check_conn.py  check_metadata.py  debug_ollama.py  debug_output.txt  debug_output_v2.txt  debug_output_v3.txt  debug_output_v4.txt  debug_result.txt  dir_output.txt  install.bat  install.ps1  latest_log.txt  log_dump.txt  log_tail.txt  main.py  main.spec  probe_api.py  probe_ref.py  probe_search.py  probe_search_raw.py  project specs.md  pyproject.toml  read_log.py  requirements.txt  rewrite_step2.py  schema.sql  start_synapic.bat  temp_api_main.py  test_global_search.py  test_original.py  verify_live_api.py
.gemini/: DAMINION_API_INDEX.md  DAMINION_API_REFERENCE.md  DAMINION_CLIENT_MIGRATION.md  LOG_ANALYSIS_FIX.md  LOG_LOCATION_UPDATE.md  ORGANIZATION_SUMMARY.md  README.md  TEST_CONFIGURATION.md  TEST_SUITE_SUMMARY.md  VERSION_HISTORY.md
.github/: WORKSPACE.txt
docs/: THRESHOLD_FEATURE.md  daminion_api_feedback.md  project specs.md  test_output.txt
phase3-observability/: README.md
release/: Build - Streamlined.bat  Build - bak.bat
scripts/: title_case_catalog.py  verify_ollama_cloud.py
tests/: README.md  __init__.py  check_xmp.py  combined_filter_results.txt  debug_daminion_filters.py  debug_filters_ascii.txt  discover_api.py  dump_exif_pillow.py  error_log.txt  error_log_ascii.txt  persistence_output.txt  persistence_output_2.txt  probe_log.txt  probe_output.txt  read_log.py  search_results.txt  test_concurrency.py  (+12 more)
(+77 files in other folders)
