[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapic"
version = "1.0.2"
authors = [
  { name="Dean", email="dean@example.com" },
]
description = "AI-Powered Image Metadata Tagging for Digital Asset Management"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "customtkinter>=5.2.2",
    "requests>=2.32.5",
    "pillow>=12.0.0",
    "piexif>=1.1.3",
    "iptcinfo3>=2.1.4",
    "tqdm>=4.67.1",
    "huggingface_hub>=0.28.0",
    "transformers>=4.57.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "timm>=1.0.24",
    "accelerate>=1.12.0",
    "qwen-vl-utils>=0.0.14",
    "protobuf>=6.33.3",
    "sentencepiece>=0.2.1",
]

[project.urls]
"Homepage" = "https://github.com/deanable/Synapic"
"Bug Tracker" = "https://github.com/deanable/Synapic/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
